--- a/BuntyBot.ipynb
+++ b/BuntyBot.ipynb
@@ -16,7 +16,7 @@
     "from swarmauri.standard.conversations.concrete.Conversation import Conversation\n",
     "\n",
     "# Set the API key directly (for testing purposes; not recommended for production)\n",
-    "API_KEY = \"API_KEY"\n",
+    "API_KEY = \"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\"\n",
     "\n",
     "# Initialize the GroqModel with the provided API key\n",
     "llm = GroqModel(api_key=API_KEY)\n",
